Finished responsivity for both mobile and tablet. Set Z-index of mobile nav overlay. Fixed font size assignations for tablet.

--- a/src/app/crew/crew.component.css
+++ b/src/app/crew/crew.component.css
@@ -86,6 +86,48 @@ h4 {
 
     .crew-body {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .crew-body-content {
+        width: 100%;
+        align-items: center;
+    }
+
+    .crew-body-title {
+        padding: 4em 0 1.5em 1em;
+    }
+
+    .crew-body-content-text-wrapper {
+        position: relative;
+        width: 100%;
+        margin-bottom: 3.5em;
+    }
+
+    .crew-section {
+        position: relative;
+        width: 75%;
+        text-align: center;
+        margin: auto;
+    }
+
+    .crew-body-content-nav {
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        bottom: 50%;
+    }
+
+    .nav-link-icon {
+        width: 0.625rem;
+        height: 0.625rem;
+    }
+
+    .crew-img {
+        width: 50%;
+        right: inherit;
+        max-height: 45%;
     }
 
 }
@@ -138,7 +180,7 @@ h4 {
 
     .crew-body-content-text {
         position: fixed;
-        bottom: 10%;
+        top: 60%;
         display: flex;
         align-items: flex-start;
         justify-content: center;
