--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,19 @@ hr {
     } 
 
     h1 {
-        --fs-h1: 5.5rem;
+        --fs-h1: 9.375rem;
+    }
+
+    h2 {
+        --fs-h2: 5rem;
+    }
+
+    h3 {
+        --fs-h3: 2.5rem;
+    }
+
+    h4 {
+        --fs-h4: 1.5rem;
     }
 
     h5 {
